Table "myschema"."customers" {
  "customer_id" int4 [pk, not null, increment]
  "name" varchar(255)
  "email" varchar(255)
}

Table "myschema"."order_items" {
  "order_item_id" int4 [pk, not null, increment]
  "order_id" int4
  "product_id" int4
  "quantity" int4
}

Table "myschema"."orders" {
  "order_id" int4 [pk, not null, increment]
  "customer_id" int4
  "order_date" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "myschema"."payments" {
  "payment_id" int4 [pk, not null, increment]
  "customer_id" int4 [not null]
  "amount" numeric(10,2) [not null]
  "payment_date" timestamp [default: `CURRENT_TIMESTAMP`]
  "status" varchar(50) [not null]
}

Table "myschema"."products" {
  "product_id" int4 [pk, not null, increment]
  "name" varchar(255)
  "price" numeric(10,2)
}

Table "customers" {
  "customer_id" int4 [pk, not null, increment]
  "name" varchar(100) [not null]
  "email" varchar(100) [unique, not null]
}

Table "order_items" {
  "order_item_id" int4 [pk, not null, increment]
  "order_id" int4 [not null]
  "product_id" int4 [not null]
  "quantity" int4 [not null]
}

Table "orders" {
  "order_id" int4 [pk, not null, increment]
  "customer_id" int4 [not null]
  "order_date" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "products" {
  "product_id" int4 [pk, not null, increment]
  "name" varchar(100) [not null]
  "price" numeric(10,2) [not null]
}

Ref "order_items_order_id_fkey":"myschema"."orders"."order_id" < "myschema"."order_items"."order_id"

Ref "order_items_order_id_fkey":"orders"."order_id" < "myschema"."order_items"."order_id"

Ref "order_items_product_id_fkey":"myschema"."products"."product_id" < "myschema"."order_items"."product_id"

Ref "order_items_product_id_fkey":"products"."product_id" < "myschema"."order_items"."product_id"

Ref "orders_customer_id_fkey":"myschema"."customers"."customer_id" < "myschema"."orders"."customer_id"

Ref "orders_customer_id_fkey":"customers"."customer_id" < "myschema"."orders"."customer_id"

Ref "payments_customer_id_fkey":"myschema"."customers"."customer_id" < "myschema"."payments"."customer_id" [delete: cascade]

Ref "order_items_order_id_fkey":"myschema"."orders"."order_id" < "order_items"."order_id" [delete: cascade]

Ref "order_items_order_id_fkey":"orders"."order_id" < "order_items"."order_id" [delete: cascade]

Ref "order_items_product_id_fkey":"myschema"."products"."product_id" < "order_items"."product_id" [delete: cascade]

Ref "order_items_product_id_fkey":"products"."product_id" < "order_items"."product_id" [delete: cascade]

Ref "orders_customer_id_fkey":"myschema"."customers"."customer_id" < "orders"."customer_id" [delete: cascade]

Ref "orders_customer_id_fkey":"customers"."customer_id" < "orders"."customer_id" [delete: cascade]
